--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "client": "npm run dev --prefix ../client/",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\" \"npm run client\" "
   }
 }
