--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT = 8000
 MONGO_LOCAL_URL=mongodb://localhost:27017/klas
+MONGO_URL=mongodb+srv://aqua_dev:damodami43@cluster0.vu3xazx.mongodb.net/?retryWrites=true&w=majority
